--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.1.6",
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/forms": "^0.5.9",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -31,6 +32,6 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
-    "vite": "^5.4.1"
+    "vite": "^5.4.4"
   }
 }
