--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,11 @@
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
     "client": "file:",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
