--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
     "client": "file:",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
