--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "client": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
