--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mi-ruta": "file:",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.0",
-    "react-hook-form": "^7.53.0"
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "concurrently": "^9.0.1",
