--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mi-ruta": "file:",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0"
