--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
     "client": "file:",
+    "express": "^4.21.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
     "react": "^18.3.1",
@@ -31,7 +32,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
-    "concurrently": "^9.0.1",
+    "concurrently": "^9.1.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
