--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
+    "react-custom-roulette": "^1.4.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0"
   },
