--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
     "react": "^18.3.1",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
