--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,13 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "client": "file:",
+    "crypto": "^1.0.1",
     "express": "^4.21.1",
+    "file-saver": "^2.0.5",
+    "jspdf": "^2.5.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
+    "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
