--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.0",
+    "pdf-lib": "^1.17.1",
     "react-custom-roulette": "^1.4.1",
     "react-hook-form": "^7.53.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "concurrently": "^9.0.1",
