--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "crypto": "^1.0.1",
     "express": "^4.21.1",
     "file-saver": "^2.0.5",
+    "json-schema-to-ts": "^3.1.1",
     "jspdf": "^2.5.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
